package command;

/**
 * ClassName: LightReceiver
 * Description:
 * date: 2021/12/6 下午11:01
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class LightReceiver {

    public void onLight(){
        System.out.println("开灯");
    }

    public void offLight(){
        System.out.println("关灯");
    }
}
