package command;

/**
 * ClassName: NOCommand
 * Description:
 * date: 2021/12/6 下午11:06
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public class NOCommand implements Command{

    @Override
    public void execute() {

    }

    @Override
    public void undo() {

    }
}
